hphp/hack/test/typecheck/shape_key_exists5.php.exp
ERROR: File "shape_key_exists5.php", line 15, characters 3-29:
This `Shapes::keyExists()` check is always false (Typing[4250])
  File "shape_key_exists5.php", line 10, characters 3-54:
  The field `z` is not defined in this shape
